# space-escape

./: .clang-format  CMakeLists.txt  conanfile.py  conanfile.txt  license.md  readme.md
.github/workflows/: integration.yml
cmake/: box2d.cmake  entityx.cmake  sdl2.cmake
source/: main.cpp
source/components/: animation.hpp  body.hpp  breakable.hpp  collided.hpp  color.hpp  controlled.hpp  deadly.hpp  joint.hpp  life.hpp  limited.hpp  material.hpp  message.hpp  physics.hpp  position.hpp  renderable.hpp  score.hpp  size.hpp  speed.hpp  texture.hpp
source/core/: common.cpp  common.hpp  config.hpp  game.cpp  game.hpp  resource.cpp  resource.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp  world.cpp  world.hpp
source/entities/: background.cpp  background.hpp  ball.cpp  ball.hpp  brick.cpp  brick.hpp  factory.cpp  factory.hpp  paddle.cpp  paddle.hpp  wall.cpp  wall.hpp
source/systems/: animation.cpp  animation.hpp  body.cpp  body.hpp  contact.cpp  contact.hpp  destruction.cpp  destruction.hpp  input.cpp  input.hpp  joint.cpp  joint.hpp  limit.cpp  limit.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp  score.cpp  score.hpp  sound.cpp  sound.hpp  spawn.cpp  spawn.hpp  speed.cpp  speed.hpp
